--- a/style.css
+++ b/style.css
@@ -758,8 +758,8 @@ h4 {
 
 .apply-image {
   width: 100%;
-  height: 600px;
-  object-fit: cover;
+  height: 400px;
+  object-fit: contain; 
   border-radius: 10px;
   margin-bottom: 20px;
 }
